@@ -26,6 +26,7 @@ Phoronix Test Suite (Git)
 - phoromatic: Add comparable results listing on individual result pages
 - phoromatic: Register module-discovered Phoromatic Servers with pts-core
 - phoromatic: Add "Only Advertise Cached Tests" option to rootadmin
+- phoromatic: Download latest OpenBenchmarking.org test suites/profiles in background thread from the event server
 
 Phoronix Test Suite 5.6 Milestone 1
 13 January 2015
